1.在清单文件里面添加 android:usesCleartextTraffic="true" 解决加载失败的问题 2.导入litepal包

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -37,10 +38,10 @@
             </intent-filter>
         </activity>
 
-        <provider
-            android:name="org.litepal.LitePalContentProvider"
-            android:authorities="${applicationId}.litepal.provider"
-            android:exported="false" />
+<!--        <provider-->
+<!--            android:name="org.litepal.LitePalContentProvider"-->
+<!--            android:authorities="${applicationId}.litepal.provider"-->
+<!--            android:exported="false" />-->
     </application>
 
 </manifest>
