--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,16 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation files('libs/litepal-2.0.0.jar')
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation libs.litepal.core.v300
-    implementation libs.core
+//    implementation libs.litepal.core.v300
+//    implementation libs.core
     implementation libs.okhttp
     implementation libs.gson
     implementation libs.glide
     annotationProcessor libs.compiler
+//    implementation libs.core.v320
+
 }
