--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.5.1"
 core = "1.13.0"
+coreVersion = "3.2.0"
 gson = "2.10.1"
 glide = "4.16.0"
 junit = "4.13.2"
@@ -16,6 +17,7 @@ okhttp = "4.12.0"
 [libraries]
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 core = { module = "org.litepal.android:core", version.ref = "core" }
+core-v320 = { module = "org.litepal.guolindev:core", version.ref = "coreVersion" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
