--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation files('libs/litepal-2.0.0.jar')
+    implementation libs.room.common.jvm
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -44,6 +45,8 @@ dependencies {
     implementation libs.gson
     implementation libs.glide
     annotationProcessor libs.compiler
+    implementation libs.swiperefreshlayout
+
 //    implementation libs.core.v320
 
 }
